--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@ body {
   margin: 0 auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .grid {
   display: grid;
   grid-gap: 64px;
@@ -18,13 +22,58 @@ body {
 }
 
 .grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid-3-columns-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.img-responsive {
+  max-width: 100%;
+  display: block;
+}
+
+
+.alazem-pic {
+  max-width: 200px;
+}
+
+.card {
+  background: white;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.btn {
+  display: block;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: 16px;
+  background-color: #462cb3;
+  text-decoration: none;
+}
+
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+section.secondary {
+  background: #f8f8f8;
 }
 
 header {
@@ -78,11 +127,6 @@ main {
   background-color: white;
 }
 
-.jas-pic {
-  max-width: 550px;
-  border-radius: 7px;
-}
-
 main h2 {
   font-weight: 700;
   font-size: 16px;
@@ -100,6 +144,22 @@ main h3 {
   line-height: 1.5;
   color: #272044;
   margin: 0;
+}
+
+main h4 {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  color: #272044;
+  margin: 0;
+}
+
+main h5 {
+  font-weight: 700;
+  font-size: 13px;
+  margin: 0;
+  line-height: 1;
+  color: #272044;
 }
 
 main p {
@@ -163,7 +223,7 @@ footer a {
     grid-template-columns: 1fr;
     grid-gap: 32px;
   }
-  .jas-pic {
+  .img-responsive {
     max-width: 100%;
   }
 
