Added responsive google maps embed

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,18 +30,22 @@ body {
 }
 
 .img-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
-
-.alazem-pic {
-  max-width: 200px;
+.embed {
+  width: 100%;
+  aspect-ratio: 1 /1;
 }
 
 .card {
   background: white;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  grid-gap: 0;
 }
 
 .card-body {
@@ -229,5 +233,11 @@ footer a {
 
   section {
     padding: 30px;
+  }
+  .card-header img {
+    display: none;
+  }
+  .embed {
+    aspect-ratio: 16 /9;
   }
 }
